Revision history for {{$dist->name}}

{{$NEXT}}
  [Toolchain]
  - Removed use of Dist::Zilla::Plugin::Generate::ManifestSkip.

v0.5.2    2023-11-29 17:42:29+00:00 Europe/London
  [Documentation]
  - Fixed a minor typo.

  [Tests]
  - Configured tests to play better with GitHub Actions.

  - GitHub Actions will not run tests from before Perl v5.16, even
    though earlier versions may be supported.

  - Added more author tests.

  - Switched package used for the release manifest.

  - Cleaned up unused prerequisites.

v0.5.1    2023-10-28 09:04:21+01:00 Europe/London
  [Tests]
  - Migrated to Test2.

  - Remove the use of Test::Most.

v0.5.0    2023-08-02 11:40:11+01:00 Europe/London
  [Enhancements]
  - Added "allowed" and "rejected" as synonyms for "whitelist" and "blacklist".

  - Added "norobots" rate which rejects all requests except for "/robots.txt".

  [Tests]
  - Renamed test scripts.

v0.4.4    2023-07-03 23:44:56+01:00 Europe/London
  [Documentation]
  - Added explicit support policy for older Perl versions.

v0.4.3    2023-07-03 22:34:26+01:00 Europe/London
  [Documentation]
  - Noted a KNOWN ISSUE when using Config::General to configure this.

v0.4.2    2023-02-22 09:07:28+00:00 Europe/London
  [Bug Fixes]
  - Count hits from blocked addresses and log them.

v0.4.1    2023-02-06 15:22:33+00:00 Europe/London
  [Documentation]
  - Fixed typo in Changes.

v0.4.0    2023-02-04 15:18:15+00:00 Europe/London (TRIAL RELEASE)
  [Incompatible Changes]
  - Bumped minimum Perl version to v5.12.

v0.3.5    2023-01-10 14:47:47+00:00 Europe/London
  [Documentation]
  - Bumped copyright year.

  [Other]
  - Added GitHub Actions to run tests, GH#3, thanks @szabgab

v0.3.4    2022-12-08 13:33:03+00:00 Europe/London
  [Other]
  - Fixed typo in git repository URL, GH#2, thanks @szabgab.

v0.3.3    2022-12-07 17:01:40+00:00 Europe/London
  [Enhancements]
  - Remove use of blessed pairs, which allows List::Util to be downgraded.

  [Documentation]